fix scrollbar issue during nav transition

--- a/src/app.css
+++ b/src/app.css
@@ -75,6 +75,7 @@
 
 	.lenis.lenis-stopped {
 		overflow: hidden;
+		scrollbar-gutter: stable;
 	}
 
 	.lenis.lenis-scrolling iframe {
